2023: Java Day11
some cleanup